--- a/src/index.html
+++ b/src/index.html
@@ -238,12 +238,29 @@ team_member:
         <a href="" class="btn animated-border" data-toggle="modal" data-target="#demoModal">Book a Demo</a>
       </div>
       <div class="col-12 col-lg-7">
-        <div id="kettle-tablet-wrapper">
-          <img id="kettle-tablet" class="img-fluid" alt="Tablet displaying wildfire risk" src="/img/displays/kettle-tech-tablet-display.png" />
-          <video autoplay loop>
-            <source src="/video/intro_gtpgsr.mp4" type="video/mp4" />
-          </video>
+
+
+        <div class="project__mockup">
+          <div class="iphone">
+            <div class="iphone__inner">
+              <img src="https://i.vimeocdn.com/video/655250209.webp?mw=700&mh=1248&q=70" alt="">
+              <video controls="false" autoplay loop muted src="/video/intro_gtpgsr.mp4"></video>
+            </div>
+          </div>
         </div>
+
+
+
+
+
+        <!-- <div id="kettle-tablet-wrapper">
+          <img id="kettle-tablet" alt="Tablet displaying wildfire risk" src="/img/displays/kettle-tech-tablet-display.png" />
+        </div>
+        <div class="kettle-video-wrapper">
+          <video autoplay loop  id="kettle-video">
+            <source src="/video/intro_gtpgsr.mp4" type="video/mp4"/>
+          </video>
+        </div> -->
       </div>
     </div>
     <div class="container py-5 my-5">
