--- a/src/index.html
+++ b/src/index.html
@@ -89,17 +89,20 @@ team_member:
 </section>
 
 <section class="bg-gray pt-0 px-3 px-lg-auto">
+
   <div class="container p-3 p-lg-5 mb-5" id="how-reinsurance-works">
+
     <div class="row">
       <div class="col-12">
         <h1 class="editable mb-4">How Reinsurance Works</h1>
       </div>
     </div>
+      <div class="risk-wrapper">
     <div class="row ">
 
-      <div class="col-12 col-lg ||  stage-step" id="step-1">
+      <div class="col-12 col-lg ||  stage-step " id="step-1">
         <div class="row centered  my-3">
-          <div class="col-3 col-lg-12 px-0 centered">
+          <div class="col-3 col-lg-12 px-0 centered mb-lg-4">
             <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-customer.svg" />
           </div>
           <div class="col-9 col-lg-12">
@@ -117,7 +120,7 @@ team_member:
 
       <div class="col-12 col-lg || stage-step" id="step-2">
         <div class="row centered  my-3">
-          <div class="col-3 col-lg-12 px-0 centered">
+          <div class="col-3 col-lg-12 px-0 centered  mb-lg-5">
             <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-purchase.svg" />
           </div>
           <div class="col-9 col-lg-12">
@@ -130,7 +133,7 @@ team_member:
 
       <div class="col-12 col-lg || stage-step" id="step-3">
         <div class="row centered  my-3">
-          <div class="col-3 col-lg-12 px-0 centered">
+          <div class="col-3 col-lg-12 px-0 centered  mb-lg-5">
             <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-analyze.svg" />
           </div>
           <div class="col-9 col-lg-12">
@@ -144,7 +147,7 @@ team_member:
 
       <div class="col-12 col-lg || stage-step" id="step-4">
         <div class="row centered  my-3">
-          <div class="col-3 col-lg-12 px-0 centered ">
+          <div class="col-3 col-lg-12 px-0 centered  mb-lg-5">
             <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-pricing.svg" />
           </div>
           <div class="col-9 col-lg-12">
@@ -156,8 +159,8 @@ team_member:
       </div>
 
       <div class="col-12 col-lg || stage-step" id="step-5">
-        <div class="row centered align-items-start my-3">
-          <div class="col-3 col-lg-12 px-0 centered">
+        <div class="row centered align-items-start my-3  ">
+          <div class="col-3 col-lg-12 px-0 centered mb-lg-4">
             <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-transfer-risk.svg" />
           </div>
           <div class="col-9 col-lg-12">
@@ -175,6 +178,7 @@ team_member:
       </div>
 
 
+    </div>
     </div>
 </div></section>
 
@@ -244,7 +248,7 @@ team_member:
           <div class="iphone">
             <div class="iphone__inner">
               <img src="https://i.vimeocdn.com/video/655250209.webp?mw=700&mh=1248&q=70" alt="">
-              <video controls="false" autoplay loop muted src="/video/intro_gtpgsr.mp4"></video>
+              <video autoplay loop muted src="/video/intro_gtpgsr.mp4"></video>
             </div>
           </div>
         </div>
