--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@ team_member:
             <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-customer.svg" />
           </div>
           <div class="col-9 col-lg-12">
-            <div class="bg-gray px-3 py-2 wrapper">
+            <div class="bg-gray px-3 py-2 wrapper ">
               <p class="small text-uppercase text-salmon text-bold mb-0">
                 Insurer
               </p>
@@ -124,9 +124,11 @@ team_member:
             <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-purchase.svg" />
           </div>
           <div class="col-9 col-lg-12">
+            <div class=" ml-n5 pl-5">
             <p class="small pl-3">
               Insurers buy reinsurance from Kettle.
             </p>
+            </div>
           </div>
         </div>
       </div>
