--- a/src/index.html
+++ b/src/index.html
@@ -51,12 +51,24 @@ team_member:
         <a class="btn editable" data-toggle="modal" data-target="#demoModal">Book a Demo</a>
       </div>
       <div class="col-12 col-md-6">
-        <div id="comp-wrapper">
+
+
+
+        <div class="project_mockup">
+          <div class="iphone">
+            <div class="iphone__inner">
+              <img src="https://i.vimeocdn.com/video/655250209.webp?mw=700&mh=1248&q=70" alt="">
+              <video controls="false" autoplay loop muted src="/video/kettle-animation.webm"></video>
+            </div>
+          </div>
+        </div>
+
+        <!-- <div id="comp-wrapper">
           <img class="img-fluid" src="/img/displays/kettle-header-desktop-display.png" />
           <video autoplay loop>
             <source src="/video/kettle-animation.webm" type="video/webm" />
           </video>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -247,26 +259,14 @@ team_member:
 
 
         <div class="project__mockup">
-          <div class="iphone">
-            <div class="iphone__inner">
-              <img src="https://i.vimeocdn.com/video/655250209.webp?mw=700&mh=1248&q=70" alt="">
+          <div class="tablet">
+            <div class="tablet__inner">
               <video autoplay loop muted src="/video/intro_gtpgsr.mp4"></video>
             </div>
           </div>
         </div>
 
 
-
-
-
-        <!-- <div id="kettle-tablet-wrapper">
-          <img id="kettle-tablet" alt="Tablet displaying wildfire risk" src="/img/displays/kettle-tech-tablet-display.png" />
-        </div>
-        <div class="kettle-video-wrapper">
-          <video autoplay loop  id="kettle-video">
-            <source src="/video/intro_gtpgsr.mp4" type="video/mp4"/>
-          </video>
-        </div> -->
       </div>
     </div>
     <div class="container py-5 my-5">
