--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@ team_member:
           <div class="iphone">
             <div class="iphone__inner">
               <img src="https://i.vimeocdn.com/video/655250209.webp?mw=700&mh=1248&q=70" alt="">
-              <video controls="false" autoplay loop muted src="/video/kettle-animation.webm"></video>
+              <video  autoplay loop muted src="/video/kettle-animation.webm"></video>
             </div>
           </div>
         </div>
