--- a/src/index.html
+++ b/src/index.html
@@ -43,9 +43,9 @@ team_member:
   <div class="container">
     <div class="row">
       <div class=" col-12 col-md-8">
-        <h1 class="editable text-center text-md-left">Insurers can't predict the next climate crisis, but we are getting close</h1>
+        <h1 class="editable">Insurers can't predict the next climate crisis, but we are getting close</h1>
       </div>
-      <div class="col-12 col-md-6 editable text-center text-md-left">
+      <div class="col-12 col-md-6 editable ">
         <h2 class="editable  my-4 pr-md-5 ">Kettle is building a better re/insurance model for balancing risk in a changing climate.</h2>
         <p class="editable my-3">Schedule a demo of our latest fire prediction model</p>
         <a class="btn editable" data-toggle="modal" data-target="#demoModal">Book a Demo</a>
@@ -57,8 +57,7 @@ team_member:
         <div class="project_mockup">
           <div class="iphone">
             <div class="iphone__inner">
-              <img src="https://i.vimeocdn.com/video/655250209.webp?mw=700&mh=1248&q=70" alt="">
-              <video  autoplay loop muted src="/video/kettle-animation.webm"></video>
+              <video  autoplay loop muted src="/video/kettle-animation.mp4"></video>
             </div>
           </div>
         </div>
