--- a/src/index.html
+++ b/src/index.html
@@ -57,8 +57,8 @@ team_member:
         <div class="project_mockup">
           <div class="iphone">
             <div class="iphone__inner">
-              <!-- <video autoplay loop muted src="/video/kettle-animation.mp4"></video> -->
-              <video autoplay loop muted src="/video/intro_gtpgsr.mp4"></video>
+              <video autoplay loop muted src="/video/kettle-animation.mp4"></video>
+              <!-- <video autoplay loop muted src="/video/intro_gtpgsr.mp4"></video> -->
             </div>
           </div>
         </div>
