--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@ team_member:
         <div class="project_mockup">
           <div class="iphone">
             <div class="iphone__inner">
-              <video autoplay loop muted src="/video/kettle-animation.mp4"></video>
+              <video autoplay loop muted playsinline  src="/video/kettle-animation.mp4"></video>
               <!-- <video autoplay loop muted src="/video/intro_gtpgsr.mp4"></video> -->
             </div>
           </div>
@@ -261,7 +261,7 @@ team_member:
         <div class="project__mockup">
           <div class="tablet">
             <div class="tablet__inner">
-              <video autoplay loop muted src="/video/intro_gtpgsr.mp4"></video>
+              <video autoplay loop muted playsinline  src="/video/intro_gtpgsr.mp4"></video>
             </div>
           </div>
         </div>
