--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@ team_member:
       <div class="risk-wrapper">
     <div class="row ">
 
-      <div class="col-12 col-lg ||  stage-step " id="step-1">
+      <div class="col-12 col-lg ||  stage-step animate fade-up" id="step-1">
         <div class="row centered  my-3">
           <div class="col-3 col-lg-12 px-0 centered mb-lg-4">
             <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-customer.svg" />
@@ -130,7 +130,7 @@ team_member:
         </div>
       </div>
 
-      <div class="col-12 col-lg || stage-step" id="step-2">
+      <div class="col-12 col-lg || stage-step animate fade-up" id="step-2">
         <div class="row centered  my-3">
           <div class="col-3 col-lg-12 px-0 centered  mb-lg-5">
             <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-purchase.svg" />
@@ -145,7 +145,7 @@ team_member:
         </div>
       </div>
 
-      <div class="col-12 col-lg || stage-step" id="step-3">
+      <div class="col-12 col-lg || stage-step animate fade-up" id="step-3">
         <div class="row centered  my-3">
           <div class="col-3 col-lg-12 px-0 centered  mb-lg-5">
             <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-analyze.svg" />
@@ -159,7 +159,7 @@ team_member:
       </div>
 
 
-      <div class="col-12 col-lg || stage-step" id="step-4">
+      <div class="col-12 col-lg || stage-step animate fade-up" id="step-4">
         <div class="row centered  my-3">
           <div class="col-3 col-lg-12 px-0 centered  mb-lg-5">
             <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-pricing.svg" />
@@ -172,7 +172,7 @@ team_member:
         </div>
       </div>
 
-      <div class="col-12 col-lg || stage-step" id="step-5">
+      <div class="col-12 col-lg || stage-step animate fade-up" id="step-5">
         <div class="row centered align-items-start my-3  ">
           <div class="col-3 col-lg-12 px-0 centered mb-lg-4">
             <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-transfer-risk.svg" />
