Updated 'src/index.html' via CloudCannon

--- a/src/index.html
+++ b/src/index.html
@@ -43,12 +43,14 @@ team_member:
   <div class="container">
     <div class="row">
       <div class=" col-12 col-md-8">
-        <h1 class="editable">Insurers can't predict the next climate crisis, but we are getting close</h1>
+        <h1 class="editable">
+          <strong>Balancing Risk in a Changing Climate.</strong>
+        </h1>
       </div>
       <div class="col-12 col-md-6 editable ">
-        <h2 class="editable  my-4 pr-md-5 ">Kettle is building a better re/insurance model for balancing risk in a changing climate.</h2>
-        <p class="editable my-3">Schedule a demo of our latest fire prediction model</p>
-        <a class="btn editable" data-toggle="modal" data-target="#demoModal">Book a Demo</a>
+        <h2 class="my-4 pr-md-5">Kettle is building a smarter re/insurance model for protecting today&rsquo;s globalized world.</h2>
+        <p class="my-3">Schedule a demo of our latest fire prediction model</p>
+        <p><a class="btn" data-toggle="modal" data-target="#demoModal">Book a Demo</a></p>
       </div>
       <div class="col-12 col-md-6">
 
@@ -57,7 +59,7 @@ team_member:
         <div class="project_mockup">
           <div class="iphone">
             <div class="iphone__inner">
-              <video autoplay loop muted playsinline  src="/video/kettle-animation.mp4"></video>
+              <video autoplay loop muted playsinline src="/video/kettle-animation.mp4"></video>
               <!-- <video autoplay loop muted src="/video/intro_gtpgsr.mp4"></video> -->
             </div>
           </div>
@@ -80,21 +82,23 @@ team_member:
   <div class="container ">
     <div class="row centered">
       <div class="col-12 col-md-8">
-        <h1 class="editable text-center">We use deep learning to protect people and society from increasing climate crises</h1>
+        <h1 class="editable text-center">
+          <strong>Insurers can&rsquo;t predict the next climate crises, but we are getting close.</strong>
+        </h1>
       </div>
     </div>
     <div class="row centered align-items-baseline">
       <div class="col-12 col-md-4 editable text-center">
-        <img class="img-fluid my-3" alt="Extreme temperatures" src="/img/icons/kettle-icon-extreme-temps.svg" />
-        <p class="editable ">Wildfires, hurricanes and extreme temperatures are contributing to <strong>$2.98 trillion in losses over the past decade</strong>. Our communities need a better system to protect them.</p>
+        <p><img class="img-fluid my-3" alt="Extreme temperatures" src="/img/icons/kettle-icon-extreme-temps.svg" /></p>
+        <p>Wildfires, hurricanes and extreme temperatures are contributing to $2.98 trillion in losses over the past decade.</p>
       </div>
       <div class="col-12 col-md-4  editable text-center">
-        <img class="img-fluid my-3" alt="Underwriting Platform" src="/img/icons/kettle-icon-underwriting-platform.svg" />
-        <p class="editable ">Kettle is an underwriting platform built for the modern world, using <strong>deep learning</strong> to deliver better protections for people and <strong>more stable returns for the insurance industry</strong>.</p>
+        <p><img class="img-fluid my-3" alt="Underwriting Platform" src="/img/icons/kettle-icon-underwriting-platform.svg" /></p>
+        <p>We use deep learning to deliver better protections for people and more stable returns for the insurance industry.</p>
       </div>
       <div class="col-12 col-md-4 editable text-center">
-        <img class="img-fluid my-3" alt="Transfer Risk" src="/img/icons/kettle-icon-transfer-risk.svg" />
-        <p class="editable ">As an MGA Kettle <strong>analyzes, holds and transfers risk</strong> to buyers who want to balance their portfolio.</p>
+        <p><img class="img-fluid my-3" alt="Transfer Risk" src="/img/icons/kettle-icon-transfer-risk.svg" /></p>
+        <p>Kettle analyzes, holds and transfers risk to buyers who want to balance their portfolio.</p>
       </div>
     </div>
   </div>
@@ -106,7 +110,9 @@ team_member:
 
     <div class="row">
       <div class="col-12">
-        <h1 class="editable mb-4">How Reinsurance Works</h1>
+        <h1 class="editable mb-4">
+          How Reinsurance Works
+        </h1>
       </div>
     </div>
       <div class="risk-wrapper">
@@ -200,29 +206,39 @@ team_member:
   <div class="container pt-5">
     <div class="row centered text-center">
       <div class="col-12 col-md-7">
-        <h1 class="editable ">We outperform the industry</h1>
-        <p class=" text-white editable ">Kettle’s proprietary machine learning algorithms use more than seven billion lines of satellite, weather, and ground truth data. These models use Swarm Neural Networks to find patterns that enable more accurate predictions, thereby reducing loss ratios.</p>
+        <h1 class="editable ">
+          We outperform the industry
+        </h1>
+        <p class=" text-white editable ">
+          Kettle&rsquo;s proprietary machine learning algorithms use more than seven billion lines of satellite, weather, and ground truth data. These models use Swarm Neural Networks to find patterns that enable more accurate predictions, thereby reducing loss ratios.
+        </p>
       </div>
     </div>
     <div class="row mt-5">
     </div>
     <div class="row text-center">
       <div class="col-12 col-md-4  my-4 ">
-        <h2 class="editable">3 Tredecillion (3X1042)</h2>
+        <h2 class="editable">
+          3 Tredecillion (3X1042)
+        </h2>
         <p class="small text-uppercase editable mb-0 text-white">
           Calculations per Run
         </p>
         <img class="img-fluid" src="/img/icons/kettle-icon-technology-3-tridecillion.svg" alt="Calculations" />
       </div>
       <div class="col-12 col-md-4 my-4 ">
-        <h2 class="editable">42 Million</h2>
+        <h2 class="editable">
+          42 Million
+        </h2>
         <p class="small text-uppercase editable mb-0  text-white">
           Simulations
         </p>
         <img class="img-fluid " src="/img/icons/kettle-icon-technology-simulations.svg" alt="Simulations" />
       </div>
       <div class="col-12 col-md-4  my-4 ">
-        <h2 class="editable">115,456</h2>
+        <h2 class="editable">
+          115,456
+        </h2>
         <p class="small text-uppercase editable mb-0 text-white">
           Neural Network Nodes
         </p>
@@ -231,13 +247,19 @@ team_member:
     </div>
     <div class="row centered text-center mt-5">
       <div class="col-12  mb-8">
-        <h2 class="editable text-salmon">Results in more accurate predictions</h2>
+        <h2 class="editable text-salmon">
+          Results in more accurate predictions
+        </h2>
       </div>
     </div>
     <div class="row centered mb-8">
       <div class="col-6 centered flex-column">
-        <h3 class="editable mb-0 text-xl">84.6%</h3>
-        <p class="editable small text-salmon text-center">Kettle technology accuracy</p>
+        <h3 class="editable mb-0 text-xl">
+          84.6%
+        </h3>
+        <p class="editable small text-salmon text-center">
+          Kettle technology accuracy
+        </p>
       </div>
       <!-- <div class="col-3 centered flex-column">
         <h3 class="editable text-large mb-0">62.0%</h3>
@@ -251,8 +273,12 @@ team_member:
   <div class="container">
     <div class="row centered mb-5">
       <div class="col-12 col-lg-5">
-        <h1 class="editable">Predicting the California Wildfires</h1>
-        <p class="editable text-white">Our latest fire prediction model is using deep learning models to clean, organize, and analyze real time data to calculate probabilities of fire damage at the 0.5 square mile across the state of California.</p>
+        <h1 class="editable">
+          Predicting the California Wildfires
+        </h1>
+        <p class="editable text-white">
+          Our latest fire prediction model is using deep learning models to clean, organize, and analyze real time data to calculate probabilities of fire damage at the 0.5 square mile across the state of California.
+        </p>
         <a href="" class="btn animated-border" data-toggle="modal" data-target="#demoModal">Book a Demo</a>
       </div>
       <div class="col-12 col-lg-7">
@@ -261,7 +287,7 @@ team_member:
         <div class="project__mockup">
           <div class="tablet">
             <div class="tablet__inner">
-              <video autoplay loop muted playsinline  src="/video/intro_gtpgsr.mp4"></video>
+              <video autoplay loop muted playsinline src="/video/intro_gtpgsr.mp4"></video>
             </div>
           </div>
         </div>
@@ -279,8 +305,12 @@ team_member:
   <div class="container">
     <div class="row text-center centered py-5">
       <div class="col-12 col-md-8">
-        <h1 class="editable ">We better protect the world from increasing climate crises</h1>
-        <p class="editable ">It is our ambition to use data to change our world for the better. To better protect our communities for the next catastrophe. And to contribute to a future where we can mitigate future catastrophes. We are showing how reinsurance can be a lever to improve our world.</p>
+        <h1 class="editable ">
+          We better protect the world from increasing climate crises
+        </h1>
+        <p class="editable ">
+          It is our ambition to use data to change our world for the better. To better protect our communities for the next catastrophe. And to contribute to a future where we can mitigate future catastrophes. We are showing how reinsurance can be a lever to improve our world.
+        </p>
       </div>
     </div>
 <div class="row">
@@ -289,8 +319,8 @@ team_member:
     <div class="row mb-5 h-100  bg-white centered mx-3 mx-md-auto">
 
           <div class="col-12 col-lg-4 px-0 h-100 d-none d-lg-flex {% cycle 'order-first','order-last' %}">
-              <div class="team-photo h-100 w-100" >
-                <div class="h-100"  style="background-image: url({{ member.image }});"></div>
+              <div class="team-photo h-100 w-100">
+                <div class="h-100" style="background-image: url({{ member.image }});"></div>
               </div>
           </div>
           <div class="col-12 col-lg-8 p-3 p-sm-5  team-bio h-100 w-100 centered flex-column align-items-baseline animated-border">
@@ -314,7 +344,9 @@ team_member:
   <div class="container">
     <div class="row centered">
       <div class="col-10 col-md-8 text-center">
-        <h1 class="editable">Contact us to Schedule a Demo of our Fire Prediction Model</h1>
+        <h1 class="editable">
+          Contact us to Schedule a Demo of our Fire Prediction Model
+        </h1>
         <a href="" class="btn mt-4 btn-orange" data-toggle="modal" data-target="#demoModal">Contact Us</a>
       </div>
     </div>
