--- a/src/index.html
+++ b/src/index.html
@@ -279,7 +279,7 @@ team_member:
         <p class="editable text-white">
           Our latest fire prediction model is using deep learning models to clean, organize, and analyze real time data to calculate probabilities of fire damage at the 0.5 square mile across the state of California.
         </p>
-        <a href="" class="btn animated-border" data-toggle="modal" data-target="#demoModal">Book a Demo</a>
+        <a href="" class="btn animated-border" data-toggle="modal" data-target="#demoModal">Learn more about our fire prediction model</a>
       </div>
       <div class="col-12 col-lg-7">
 
