--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,8 @@ team_member:
 
 <section id="intro-wrapper" class="pb-5 pb-md-auto">
   <div class="container">
-    <div class="row">
-      <div class=" col-12 col-md-8">
+    <div class="row text-center text-md-left">
+      <div class=" col-12 col-md-9">
         <h1 class="editable">
           <strong>Balancing Risk in a Changing Climate.</strong>
         </h1>
@@ -52,7 +52,7 @@ team_member:
         <p class="my-3">Schedule a demo of our latest fire prediction model</p>
         <p><a class="btn" data-toggle="modal" data-target="#demoModal">Book a Demo</a></p>
       </div>
-      <div class="col-12 col-md-6">
+      <div class="col-12 col-md-6 pt-5 pt-md-0">
 
 
 
@@ -83,7 +83,7 @@ team_member:
     <div class="row centered">
       <div class="col-12 col-md-8">
         <h1 class="editable text-center">
-          <strong>Insurers can&rsquo;t predict the next climate crises, but we are getting close.</strong>
+          <strong>Insurers Can&rsquo;t Predict The Next Climate Crises, But We Are Getting Close.</strong>
         </h1>
       </div>
     </div>
@@ -207,7 +207,7 @@ team_member:
     <div class="row centered text-center">
       <div class="col-12 col-md-7">
         <h1 class="editable ">
-          We outperform the industry
+          We Outperform The Industry
         </h1>
         <p class=" text-white editable ">
           Kettle&rsquo;s proprietary machine learning algorithms use more than seven billion lines of satellite, weather, and ground truth data. These models use Swarm Neural Networks to find patterns that enable more accurate predictions, thereby reducing loss ratios.
@@ -269,12 +269,12 @@ team_member:
   </div>
 </section>
 
-<section class="bg-black" style="background: url(/img/backgrounds/bg-space-top.svg); background-size: 100% auto; background-position: center bottom; background-repeat: no-repeat; ">
+<section class="bg-black pt-0" style="background: url(/img/backgrounds/bg-space-top.svg); background-size: 100% auto; background-position: center bottom; background-repeat: no-repeat; ">
   <div class="container">
     <div class="row centered mb-5">
-      <div class="col-12 col-lg-5">
+      <div class="col-12 col-lg-5 text-center text-lg-left">
         <h1 class="editable">
-          Predicting the California Wildfires
+          Predicting The California Wildfires
         </h1>
         <p class="editable text-white">
           Our latest fire prediction model is using deep learning models to clean, organize, and analyze real time data to calculate probabilities of fire damage at the 0.5 square mile across the state of California.
@@ -306,7 +306,7 @@ team_member:
     <div class="row text-center centered py-5">
       <div class="col-12 col-md-8">
         <h1 class="editable ">
-          We better protect the world from increasing climate crises
+          We Better Protect The World From Increasing Climate Crises
         </h1>
         <p class="editable ">
           It is our ambition to use data to change our world for the better. To better protect our communities for the next catastrophe. And to contribute to a future where we can mitigate future catastrophes. We are showing how reinsurance can be a lever to improve our world.
