--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@ team_member:
           <div class="col-9 col-lg-12">
             <div class=" ml-n5 pl-5">
             <p class="small pl-3">
-              Insurers buy reinsurance from Kettle.
+              Insurers buy reinsurance<br />from Kettle.
             </p>
             </div>
           </div>
@@ -254,9 +254,11 @@ team_member:
     </div>
     <div class="row centered mb-8">
       <div class="col-6 centered flex-column">
-        <h3 class="editable mb-0 text-xl">
-          84.6%
+        <h3 class="editable mb-0 text-xl counter d-inline-block" id="value">
+          84.6
         </h3>
+
+
         <p class="editable small text-salmon text-center">
           Kettle technology accuracy
         </p>
@@ -269,7 +271,7 @@ team_member:
   </div>
 </section>
 
-<section class="bg-black pt-0" style="background: url(/img/backgrounds/bg-space-top.svg); background-size: 100% auto; background-position: center bottom; background-repeat: no-repeat; ">
+<section class="bg-black pt-0" style="background: url(/img/backgrounds/bg-curve.svg); background-size: 100% auto; background-position: center bottom; background-repeat: no-repeat; ">
   <div class="container">
     <div class="row centered mb-5">
       <div class="col-12 col-lg-5 text-center text-lg-left">
@@ -301,7 +303,7 @@ team_member:
 </section>
 
 
-<section style="background: url(/img/backgrounds/bg-space-bottom.svg); background-size: 100% auto; background-position: center top; background-repeat: no-repeat; margin-top: -1px;" id="our-team" class="bg-gray">
+<section id="our-team" class="bg-gray pt-0">
   <div class="container">
     <div class="row text-center centered py-5">
       <div class="col-12 col-md-8">
