--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,16 @@ team_member:
       Digital Division. Son&rsquo;s more recent works focus in Deep Learning and
       its application in credit risk and catastrophic risk.</p>
     image: /img/Images/team-headshot-son.jpg
+  - name: Matt Lindeboom
+    title: Front End Engineer
+    bio_html: >-
+      <p>Matt is a software engineer and data visualizer. He&rsquo;s helped make
+      the web for more than a decade. Most recently he&rsquo;s been an
+      engineering leader and contributor helping bring new products to market at
+      SurveyMonkey. Before that he has helped solve digital problems in fintech,
+      fashion, and brand design. When he isn&rsquo;t coding, Matt likes to write
+      music and fiction.</p>
+    image: /uploads/headshot.jpg
 ---
 
 <section id="intro-wrapper" class="pb-5 pb-md-auto">
