--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@ team_member:
       its application in credit risk and catastrophic risk.</p>
     image: /img/Images/team-headshot-son.jpg
   - name: Matt Lindeboom
-    title: Front End Engineer
+    title: Lead Engineer
     bio_html: >-
       <p>Matt is a software engineer and data visualizer. He&rsquo;s helped make
       the web for more than a decade. Most recently he&rsquo;s been an
