Typo fix in Matt bio

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@ team_member:
     bio_html: >-
       <p>Matt is a software engineer and data visualizer. He&rsquo;s helped make
       the web for more than a decade, working on problems in fintech, fashion, 
-      and brand design. Most recently he was an engineering leader and contributor helping to
+      and brand design. Most recently he was an engineering leader and contributor helping
       bring new products to market at SurveyMonkey.</p>
     image: /img/Images/team-headshot-matt.jpg
 ---
