--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@ team_member:
       its application in credit risk and catastrophic risk.</p>
     image: /img/Images/team-headshot-son.jpg
   - name: Nigel Mortimer
-    title: Executive Chairman
+    title: Executive Chairman and CUA
     bio_html: >-
       <p>Nigel is a seasoned insurance executive having spent 30 years in the industry 
         primarily in London and Bermuda. As founder and President of Argo&rsquo;s Bermuda 
@@ -54,7 +54,7 @@ team_member:
     title: Lead Engineer
     bio_html: >-
       <p>Matt is a software engineer and data visualizer. He&rsquo;s helped make
-      the web for more than a decade, working on problems in fintech, fashion, 
+      the web for more than a decade, working on problems in fintech, retail and fashion strategy, 
       and brand design. Most recently he was an engineering leader and contributor helping
       bring new products to market at SurveyMonkey.</p>
     image: /img/Images/team-headshot-matt.jpg
