CUA to CUO correction

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@ team_member:
       its application in credit risk and catastrophic risk.</p>
     image: /img/Images/team-headshot-son.jpg
   - name: Nigel Mortimer
-    title: Executive Chairman and CUA
+    title: Executive Chairman and CUO
     bio_html: >-
       <p>Nigel is a seasoned insurance executive having spent 30 years in the industry 
         primarily in London and Bermuda. As founder and President of Argo&rsquo;s Bermuda 
