Add sup tag to (3x10^42) claim

--- a/src/index.html
+++ b/src/index.html
@@ -291,7 +291,7 @@ team_member:
     <div class="row mt-5"></div>
     <div class="row text-center">
       <div class="col-12 col-md-4 my-4">
-        <h2 class="editable">3 Tredecillion (3X1042)</h2>
+        <h2 class="editable">3 Tredecillion (3X10<sup>42</sup>)</h2>
         <p class="small text-uppercase editable mb-0 text-white">
           Calculations per Run
         </p>
